# simple-sokoban

./: Makefile.am  configure.ac  funcs.txt  funcs_all.txt  gra.c  gra.h  history.txt  save.c  save.h  simplesok.6.in  simplesok.c  simplesok.txt  skin.c  skin.h  sok_core.c  sok_core.h
pkgbuild/deb/: simplesok.dsc  simplesok_1.0.2-1.debian.tar.xz
pkgbuild/flatpak/: io.osdn.simplesok.metainfo.xml
pkgbuild/rpm/: simplesok.spec.in
pkgbuild/rpm_fedora/: simplesok.spec.in
